--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "deploy": "vercel"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -52,6 +53,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "vercel": "^42.1.1",
     "vite": "^6.3.5"
   }
 }
